--- a/app/AdminModule/Presenters/templates/@layout.latte
+++ b/app/AdminModule/Presenters/templates/@layout.latte
@@ -15,6 +15,8 @@
 	<link rel="icon" href="{$basePath}/img/favicon/favicon.svg" type="image/svg+xml" />
 	<link rel="manifest" href="{plink Homepage:manifest}" />
 
+	<link rel="stylesheet" href="{$basePath}/stylesheets/admin-main.css">
+
 	{block head}{/block}
 </head>
 <body style="padding-top:4.5rem;">
